Not resolved line wrap for no-space between radio button and label

--- a/style.CSS
+++ b/style.CSS
@@ -6,13 +6,13 @@
 :root {
     --primary: lightblue;
     --secondary: rgb(234, 190, 243);
-    --margin: darkblue;
+    --text: darkblue;
 }
 /* Mobile Style - no media query! */
 body {
     margin: 30px;
     font-family: 'Courier New', Courier, monospace;
-    color: var(--margin);
+    color: var(--text);
     text-align: center;
 }
 .gridContainer{
@@ -51,7 +51,7 @@ body {
 }
 input:checked + .gridContainer #grid {
 display : grid;}
-/* grid style html items */
+/* grid style index html items */
 .header{
     grid-column: 3/11;
     grid-row: 1/2;
@@ -73,7 +73,7 @@ display : grid;}
     grid-row: 5/6;
     padding: 5px;   
 }
-.footer{
+.footer1{
     grid-column: 3/11;
     grid-row: 7/9;
     padding: 5px; 
@@ -82,3 +82,59 @@ display : grid;}
     font-style: italic; 
     color:white;
 }
+/* grid style gender html items */
+.links1{
+    grid-column: 1/3;
+    grid-row: 1/2;
+    padding: 5px; 
+    background: var(--primary);
+    font-size:small;
+    font-style: italic; 
+    color:var(--text);
+}
+.links2{
+    grid-column: 11/13;
+    grid-row: 1/2;
+    padding: 5px; 
+    background: var(--primary);
+    font-size:small;
+    font-style: italic; 
+    color:var(--text);
+}
+.prem1{
+    grid-column: 3/11;
+    grid-row: 2/4;
+}
+.img1{
+    grid-column: 5/9;
+    grid-row: 4/6;
+}
+.container1{
+    grid-column: 4/10;
+    grid-row: 6/8;
+}
+.img2{
+    grid-column: 5/9;
+    grid-row: 8/11;
+}
+.container2{
+    grid-column: 4/10;
+    grid-row: 11/13;
+}
+.img3{
+    grid-column: 5/9;
+    grid-row:  13/16;
+}
+.container3{
+    grid-column: 4/10;
+    grid-row: 16/18;
+}
+.footer2{
+    grid-column: 3/11;
+    grid-row: 18/19;
+    padding: 5px; 
+    background: var(--primary);
+    font-size:small;
+    font-style: italic; 
+    color:white;
+
